--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -104,3 +104,7 @@ jhipster:
 # ===================================================================
 
 application:
+    stub:
+        musicdir: /usr/local/medianoche/data/music
+    fileType:
+        audioExtensions: wav,mp3,aaif,aac,flac,m4a,ogg,gsm,pcm,au,vox,wma,atrac
