--- a/build.gradle
+++ b/build.gradle
@@ -112,7 +112,7 @@ if (project.hasProperty('prometheus')) {
 }
 
 group = 'com.gvaughn.medianoche'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.DEV-SNAPSHOT'
 
 description = ''
 
